fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,3 @@
   border: 1px solid;
   color: #0076be;
 }
-.card-container {
-display: flex;
-font-family: "Poppins";
-}
